<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityPost.PostActivity">

    <shiro.am.i.chesto.activityPost.HackyViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        style="@style/NavButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back"
        android:onClick="onUpButtonClicked"
        android:src="@drawable/ic_nav_arrow_back" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            app:behavior_peekHeight="?actionBarSize"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:flexWrap="wrap" />

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <View
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:alpha="0"
        android:background="?attr/colorPrimary" />

    <ImageButton
        android:id="@+id/infoButton"
        style="@style/NavButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/information"
        android:onClick="onInfoButtonClicked"
        android:src="@drawable/ic_nav_info" />

    <ImageButton
        android:id="@+id/downloadButton"
        style="@style/NavButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/download"
        android:onClick="onDownloadButtonClicked"
        android:src="@drawable/ic_nav_download" />

    <ImageButton
        android:id="@+id/browserButton"
        style="@style/NavButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/downloadButton"
        android:layout_toStartOf="@id/downloadButton"
        android:contentDescription="@string/open_in_browser"
        android:onClick="onBrowserButtonClicked"
        android:src="@drawable/ic_nav_open_in_browser" />

    <ImageButton
        android:id="@+id/shareButton"
        style="@style/NavButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/browserButton"
        android:layout_toStartOf="@id/browserButton"
        android:contentDescription="@string/share"
        android:onClick="onShareButtonClicked"
        android:src="@drawable/ic_nav_share" />

</RelativeLayout>